--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Note App</string>
+    <string name="app_name">BelajarRoom</string>
+    <string name="add">Add</string>
 </resources>
